Fix #115413: Missing PropertyRNA rawtype set for some DNA types

makesrna.cc#rna_set_raw_property was missing support for the `int8_t`,
`uchar` (`uint8_t`) and `ushort` (`uint16_t`) DNA types.

For #115413 specifically, 27a5da4dc3 replaced the `char` fields used by
the `handle_left_type` and `handle_right_type` enum properties with
`uint8_t` fields. Without an RNA raw type being set for properties using
`uint8_t` fields, `rna_access.cc#RNA_property_raw_type()` would fall
back to assuming the raw type was `PROP_RAW_INT` which would then fail
due to #92621.

This patch adds the missing `int8_t`, `uchar` and `ushort` DNA types to
makesrna.cc#rna_set_raw_property.

The `int64_t` and `uint64_t` DNA types remain absent from
makesrna.cc#rna_set_raw_property because these types have no
corresponding RawPropertyType and these types can only be used by bool
properties (see `IS_DNATYPE_BOOLEAN_COMPAT` and the other macros in
RNA_define.hh), and bool properties use `PROP_RAW_BOOLEAN`.